--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 <div class="header-content">Nome</div>
                                 <input class="filter-input" id="filterName" type="text" placeholder="Filtra">
                             </th>
-                            <th>
+                            <th class="sortable" onclick="setSort('pmc')">
                                 <div class="header-content">PMC</div>
                             </th>
                             <th class="sortable" onclick="setSort('priceEur')">
@@ -96,7 +96,7 @@
                             <th class="sortable" onclick="setSort('changePct')">
                                 <div class="header-content">% Oggi</div>
                             </th>
-                            <th>
+                            <th class="sortable" onclick="setSort('pctTotale')">
                                 <div class="header-content">% Totale</div>
                             </th>
                             <th>
