--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
         </div>
     </div>
 
+    <footer class="app-footer" aria-label="Debug local storage">
+        <div class="footer-title">LocalStorage: <code>infoEtfState</code> (raw)</div>
+        <textarea id="infoEtfStateRaw" class="footer-raw" rows="3" spellcheck="false"></textarea>
+    </footer>
+
     <script src="InfoEtf.js"></script>
 </body>
 </html>
