--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 <div class="header-content">Nome</div>
                                 <input class="filter-input" id="filterName" type="text" placeholder="Filtra">
                             </th>
-                            <th class="sortable" onclick="setSort('pmc')">
+                            <th class="sortable" onclick="setSort('pmc')" title="Prezzo medio di carico">
                                 <div class="header-content">PMC</div>
                             </th>
                             <th class="sortable" onclick="setSort('priceEur')">
@@ -99,6 +99,12 @@
                             <th class="sortable" onclick="setSort('pctTotale')">
                                 <div class="header-content">% Totale</div>
                             </th>
+                            <th class="sortable" onclick="setSort('inv')" title="Totale Investito">
+                                <div class="header-content">Inv</div>
+                            </th>
+                            <th class="sortable" onclick="setSort('val')" title="Valore Totale">
+                                <div class="header-content">Val</div>
+                            </th>
                             <th>
                                 <div class="header-content">Low-High</div>
                             </th>
@@ -107,6 +113,10 @@
                     <tbody id="savedTableBody"></tbody>
                 </table>
             </div>
+        </div>
+
+        <div class="test-box">
+            ciao
         </div>
     </div>
 
@@ -121,7 +131,11 @@
             <div class="popup-footer">
                 <label for="pmcInput">PMC:</label>
                 <input type="number" id="pmcInput" step="0.0001" placeholder="Prezzo medio carico">
-                <button onclick="savePmc()">Salva PMC</button>
+                <label for="invInput">Inv:</label>
+                <input type="number" id="invInput" step="0.0001" placeholder="Numero investitori">
+            </div>
+            <div class="popup-footer-buttons">
+                <button onclick="savePmc()">Salva</button>
                 <button class="delete-btn" onclick="deleteRecordFromPopup()">Elimina</button>
             </div>
         </div>
