--- a/index.html
+++ b/index.html
@@ -116,19 +116,21 @@
                     <tbody id="savedTableBody"></tbody>
                 </table>
             </div>
+            <!-- Sezioni per mobile -->
+            <div class="mobile-cards" id="mobileCards"></div>
         </div>
 
         <div class="test-box" id="totalsBox">
             <div class="total-row">
-                <span class="total-label">Totale Investito:</span>
+                <span class="total-label">Totale Inv:</span>
                 <span class="total-value" id="totalInv">-</span>
             </div>
             <div class="total-row">
-                <span class="total-label">Controvalore:</span>
+                <span class="total-label">Totale Val:</span>
                 <span class="total-value" id="totalVal">-</span>
             </div>
             <div class="total-row">
-                <span class="total-label">Saldo:</span>
+                <span class="total-label">Differenza:</span>
                 <span class="total-value" id="totalDiff">-</span>
             </div>
         </div>
