--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                 <h2 class="saved-title">Titoli salvati</h2>
                 <div class="header-right">
                     <span id="lastUpdateLabel" class="last-update"></span>
+                </div>
+                <div class="header-right">
                     <button id="refreshTableBtn" type="button" onclick="refreshSavedRecords()">Refresh tabella</button>
                 </div>
             </div>
